# dconf

./: .gitlab-ci.yml  .gitmodules  HACKING  Makefile.am  NEWS  README  README.pam  autogen.sh  configure.ac  dconf.doap  meson.build  meson_options.txt  meson_post_install.py  valgrind.supp
client/: Makefile.am  dconf-client.c  dconf-client.h  dconf.h  dconf.vapi  meson.build  symbol.map  symbols.txt
common/: Makefile.am  dconf-changeset.c  dconf-changeset.h  dconf-enums.h  dconf-error.c  dconf-gvdb-utils.c  dconf-gvdb-utils.h  dconf-paths.c  dconf-paths.h  meson.build
dbus-1/: dconf-dbus-1.c
docs/: Makefile.am  dconf-docs.xml  dconf-overview.xml  dconf-sections.txt  dconf-tool.xml  meson.build
engine/: Makefile.am  dconf-engine-confinement.c  dconf-engine-confinement.h  dconf-engine-mockable.c  dconf-engine-mockable.h  dconf-engine-profile.c  dconf-engine-source-private.h  dconf-engine-source-proxied.c  dconf-engine-source-system.c  dconf-engine-source-user-nfs.c  dconf-engine-source-user.c  dconf-engine-source.c  dconf-engine-source.h  dconf-engine.c  dconf-engine.h  meson.build
gdbus/: Makefile.am  dconf-gdbus-common.c  dconf-gdbus-filter.c  dconf-gdbus-thread.c  meson.build
gsettings/: Makefile.am  abicheck.sh  dconfsettingsbackend.c  meson.build  symbol.map  symbols.txt
gvdb/: Makefile.am  README  gvdb-builder.c  gvdb-builder.h  gvdb-reader.c  gvdb-reader.h  meson.build
pam/: Makefile.am  pam_dconf.c  pam_dconf.h
po/: LINGUAS  bg.po  hr.po  id.po  is.po  nb.po  oc.po  pt.po  ug.po  zh_CN.po
proxy/: .gitignore  Makefile.am  confinement-apparmor.c  confinement-flatpak.c  confinement.c  confinement.h  permissions.c  permissions.h  proxy.c
service/: Makefile.am  ca.desrt.dconf.service.in  ca.desrt.dconf.xml  dconf-gvdb-utils.c  dconf-gvdb-utils.h  dconf-keyfile-writer.c  dconf-nfs-writer.c  dconf-service.c  dconf-writer.c  dconf-writer.h  dconf.service.in  meson.build
shm/: Makefile.am  dconf-shm-mockable.c  dconf-shm-mockable.h  dconf-shm-nfs-check.c  dconf-shm.c  meson.build
subprojects/: gvdb.wrap
tests/: Makefile.am  abicheck.sh  changeset.c  client.c  dbus-leak.c  dbus.c  dconf-mock-dbus.c  dconf-mock-gvdb-utils.c  dconf-mock-gvdb.c  dconf-mock-shm.c  dconf-mock.h  engine.c  gvdb.c  meson.build  pam-mock.c  pam-mock.h  pam.c  shellcheck.sh  shm.c  test-dconf.py  tmpdir.c  writer.c
tests/profile/: dconf.profile
